# ucaim

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  README.md  architecture.md  architecture_diagram.py  pyproject.toml  requirements.txt  run_streamlit.py  test_api_key.py  test_basic.py  test_mps_fix.py  test_openai_simple.py
caim/: __init__.py  cli.py
caim/agents/: __init__.py  agent_factory.py  base_agent.py  caim_agent.py
caim/benchmarks/: __init__.py  benchmark_runner.py  evaluation_metrics.py  memory_benchmark.py  model_comparison.py
caim/core/: __init__.py  caim_framework.py  config.py  exceptions.py  memory_controller.py
caim/demo/: __init__.py  cli_demo.py  fastapi_app.py  streamlit_app.py
caim/memory/: __init__.py  long_term_memory.py  memory_consolidator.py  memory_types.py  short_term_memory.py
caim/models/: __init__.py  base_model.py  huggingface_model.py  model_factory.py  openai_model.py
caim/retrieval/: __init__.py  embedding_generator.py  memory_retriever.py  similarity_calculator.py
caim/storage/: __init__.py  database_store.py  memory_store.py  vector_store.py
caim/utils/: __init__.py  config_utils.py  logging_utils.py
examples/: basic_usage.py
